js по БЭМ, добавил шрифт

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="form__content">
           <button type="button" class="form__close"></button>
           <h2 class="form__title">Редактировать профиль</h2>
-          <form class="popup__form" name="form">
+          <form class="popup" name="form">
             <input value="Жак-Ив Кусто" type="text" name="name" placeholder="имя" class="popup__filed popup__filed_name">
             <input value="Исследователь океана" type="text" name="job" placeholder="профессия" class="popup__filed popup__filed_job">
             <button class="popup__submit-button" type="submit">
@@ -118,6 +118,6 @@
     <footer class="footer page__footer">
       <h2 class="footer__copyright">&copy; 2020 Mesto Russia</h2>
     </footer>
-    <script src="script.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
