--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <button type="button" class="popup__close"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="popup__form" name="form">
-            <input value="" type="text" name="name" placeholder="" class="popup__input popup__input_name">
-            <input value="" type="text" name="job" placeholder="" class="popup__input popup__input_job">
+            <input value="" type="text" name="name" placeholder="" class="popup__input popup__input_type_name">
+            <input value="" type="text" name="job" placeholder="" class="popup__input popup__input_type_job">
             <button class="popup__submit-button" type="submit">
               Сохранить
             </button>
