--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="intro__submit-btn" type="button"></button>
       </section>
       <!--Button edit-->
-      <div class="popup">
+      <div class="popup popup_type_edit-profile">
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
@@ -39,8 +39,22 @@
         </div>
       </div>
 
+      <div class="popup popup_type_add-card">
+        <div class="popup__content">
+          <button type="button" class="popup__close"></button>
+          <h2 class="popup__title">Новое место</h2>
+          <form class="popup__form" name="form">
+            <input value="" type="text" name="name" placeholder="Название" class="popup__input popup__input_type_place">
+            <input value="" type="text" name="job" placeholder="Ссылка на картинку" class="popup__input popup__input_type_url">
+            <button class="popup__submit-button" type="submit">
+              Сохранить
+            </button>
+          </form>
+        </div>
+      </div>
+
       <!--Places-->
-      <section class="places">
+      <section class="places"> <!--
         <article class="place">
           <img class="place__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="храм"/>
           <div class="place__paragraph">
@@ -86,10 +100,31 @@
       </section>
     </main>
 
-    <!--Footer-->
+    <!-- Footer -->
     <footer class="footer page__footer">
       <h2 class="footer__copyright">&copy; 2020 Mesto Russia</h2>
     </footer>
+
+    <!-- image pop up -->
+    <div class="popup popup_type_image">
+      <div class="popup__content-image">
+        <button type="button" class="popup__close"></button>
+        <img class="popup__image" src="" alt="">
+        <h3 class="popup__title-image"></h3>
+      </div>
+    </div>
+
+    <template class="template-card">
+      <article class="place">
+        <button class="place__delete-button" type="button"></button>
+        <img class="place__image" src="" alt="храм"/>
+        <div class="place__paragraph">
+          <h2 class="place__title"></h2>
+          <button class="place__like-icon" type="button"></button>
+        </div>
+      </article>
+    </template>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
