Добавлено значение src

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h2 class="place__title">Карачаево-Черкессия</h2>
             <button class="place__like-icon" type="button"></button>
           </div>
-        </article>
+        </article>-->
       </section>
     </main>
 
@@ -109,7 +109,7 @@
     <div class="popup popup_type_image">
       <div class="popup__content-image">
         <button type="button" class="popup__close"></button>
-        <img class="popup__image" src="" alt="">
+        <img class="popup__image" src="#" alt="Изображение места">
         <h3 class="popup__title-image"></h3>
       </div>
     </div>
@@ -117,7 +117,7 @@
     <template class="template-card">
       <article class="place">
         <button class="place__delete-button" type="button"></button>
-        <img class="place__image" src="" alt="храм"/>
+        <img class="place__image" src="#" alt="Изображение места"/>
         <div class="place__paragraph">
           <h2 class="place__title"></h2>
           <button class="place__like-icon" type="button"></button>
