--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <img src="./images/image.jpg" alt="Аватар" class="intro__avatar">
         <div class="intro__section">
           <h1 class="intro__title">Жак-Ив Кусто</h1>
-          <button class="intro__open" id="button" type="button"></button>
+          <button class="intro__open" type="button"></button>
           <p class="intro__subtitle">Исследователь океана</p>
         </div>
-        <button class="intro__submit-btn" id="button" type="button"></button>
+        <button class="intro__submit-btn" type="button"></button>
       </section>
       <!--Button edit-->
       <div class="popup popup_type_edit-profile">
