--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <template class="template-card">
       <article class="place">
         <button class="place__delete-button" type="button"></button>
-        <img class="place__image" src="#" alt="Изображение места"/>
+        <img class="place__image" src="#" alt="#">
         <div class="place__paragraph">
           <h2 class="place__title"></h2>
           <button class="place__like-icon" type="button"></button>
