--- a/index.html
+++ b/index.html
@@ -24,29 +24,35 @@
         </div>
         <button class="intro__submit-btn" type="button"></button>
       </section>
-      <!--Button edit-->
+      <!--Редактируем профиль-->
       <div class="popup popup_type_edit-profile">
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="popup__form" name="form">
-            <input value="" type="text" name="name" placeholder="Имя" class="popup__input popup__input_type_name">
-            <input value="" type="text" name="job" placeholder="Профессия" class="popup__input popup__input_type_job">
-            <button class="popup__submit-button" type="submit">
+          <form class="popup__form" name="form" novalidate>
+            <input id="user-name" value="" type="text" name="name" minlength="2" maxlength="30" required placeholder="Имя" class="popup__input popup__input_type_name">
+            <span id="user-name-error" class="error"></span>
+            <input id="about" value="" type="text" name="job" minlength="2" maxlength="30" required placeholder="Профессия" class="popup__input popup__input_type_job">
+            <span id="about-error" class="error"></span>
+            <button class="popup__button popup__submit-button" type="submit">
               Сохранить
             </button>
           </form>
         </div>
       </div>
 
+
+      <!--Редактируем карточки-->
       <div class="popup popup_type_add-card">
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h2 class="popup__title">Новое место</h2>
           <form class="popup__form" name="form">
-            <input value="" type="text" name="name" placeholder="Название" class="popup__input popup__input_type_place">
-            <input value="" type="url" name="img" placeholder="Ссылка на картинку" class="popup__input popup__input_type_url">
-            <button class="popup__submit-button" type="submit">
+            <input id="name-card" value="" type="text" name="name" minlength="2" maxlength="30" required placeholder="Название" class="popup__input popup__input_type_place">
+            <span id="name-card-error" class="error"></span>
+            <input id="link" value="" type="url" name="img" minlength="2" required placeholder="Ссылка на картинку" class="popup__input popup__input_type_url">
+            <span id="link-error" class="error"></span>
+            <button class="popup__button popup__submit-button" type="submit">
               Сохранить
             </button>
           </form>
@@ -83,6 +89,9 @@
       </article>
     </template>
 
+
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
+
   </body>
 </html>
