--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </div>
       </article>
     </template>
-
-    <script type='module' src='./scripts/index.js'></script>
+  
+    <script type="module" src="./scripts/index.js"></script>
 
   </body>
 </html>
