--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="./pages/index.css"/>
     <title>Место</title>
   </head>
   <body class="page">
@@ -61,10 +60,10 @@
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="form-profile" novalidate>
-          <input id="user-name" value="" type="text" name="name-profile" minlength="2" maxlength="30" required placeholder="Имя" class="popup__input popup__input_type_name">
-          <span id="user-name-error" class="error"></span>
-          <input id="about" value="" type="text" name="job" minlength="2" maxlength="30" required placeholder="Профессия" class="popup__input popup__input_type_job">
-          <span id="about-error" class="error"></span>
+          <input id="name" value="" type="text" name="name" minlength="2" maxlength="30" required placeholder="Имя" class="popup__input popup__input_type_name">
+          <span id="name-error" class="error"></span>
+          <input id="job" value="" type="text" name="job" minlength="2" maxlength="30" required placeholder="Профессия" class="popup__input popup__input_type_job">
+          <span id="job-error" class="error"></span>
           <button class="popup__button popup__submit-button" type="submit">
             Сохранить
           </button>
@@ -78,9 +77,9 @@
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Новое место</h2>
         <form class="popup__form" name="form-card" novalidate>
-          <input id="card" value="" type="text" name="name-card" minlength="2" maxlength="30" required placeholder="Название" class="popup__input popup__input_type_place">
-          <span id="card-error" class="error"></span>
-          <input id="link" value="" type="url" name="img" minlength="2" required placeholder="Ссылка на картинку" class="popup__input popup__input_type_url">
+          <input id="image" value="" type="text" name="image" minlength="2" maxlength="30" required placeholder="Название" class="popup__input popup__input_type_place">
+          <span id="image-error" class="error"></span>
+          <input id="link" value="" type="url" name="link" minlength="2" required placeholder="Ссылка на картинку" class="popup__input popup__input_type_url">
           <span id="link-error" class="error"></span>
           <button class="popup__button popup__submit-button" type="submit">
             Сохранить
@@ -89,7 +88,5 @@
       </div>
     </div>
   
-    <script type="module" src="./scripts/index.js"></script>
-
   </body>
 </html>
