--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
         <button type="button" class="popup__close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="form-profile" novalidate>
-          <input id="name" value="" type="text" name="name" minlength="2" maxlength="30" required placeholder="Имя" class="popup__input popup__input_type_name">
-          <span id="name-error" class="error"></span>
+          <input id="user-name" value="" type="text" name="name" minlength="2" maxlength="30" required placeholder="Имя" class="popup__input popup__input_type_name">
+          <span id="user-name-error" class="error"></span>
           <input id="about" value="" type="text" name="about" minlength="2" maxlength="30" required placeholder="Профессия" class="popup__input popup__input_type_job">
           <span id="about-error" class="error"></span>
           <button class="popup__button popup__submit-button" type="submit">
