--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
     <main class="content page__content">
       <!--Intro-->
       <section class="intro">
-        <div class="profile__avatar-container">
+        <div class="intro__container">
           <img src="#" alt="Аватар" class="intro__avatar">
-          <button class="profile__avatar-edit"></button>
+          <button class="intro__avatar_type_edit"></button>
         </div>
         <div class="intro__section">
           <h1 class="intro__title"></h1>
@@ -95,7 +95,7 @@
 
     <!--удаление увр-->
     <section class="popup popup_type_deleteimage">
-      <div class="popup__content popup__container_size_small">
+      <div class="popup__content popup__content_size_small">
           <button type="button" class="popup__close"></button>
           <h2 class="popup__title popup__title_type_confirm">Вы уверены?</h2>
           <form action="" class="popup__form popup__form_edit-margin">
