--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <section class="intro">
         <div class="intro__container">
           <img src="#" alt="Аватар" class="intro__avatar">
-          <button class="intro__avatar_type_edit"></button>
+          <button class="intro__avatar-button"></button>
         </div>
         <div class="intro__section">
           <h1 class="intro__title"></h1>
